# STL

./: CMakeLists.txt  LICENSE  README.md  STL.code-workspace
cmake/: macros.cmake
cmake/compiler/: msvc.cmake
cmake/platform/: windows.cmake
code/: CMakeLists.txt
code/STL/: span.hpp
test/: CMakeLists.txt  span.test.cpp
